Add option to provide own k8s secret for postgresql password
The motivation for this is to have our `values.yaml` checked in to
version control -- this isn't possible if we have a plaintext secret in it.

--- a/helm/dagster/values.yaml
+++ b/helm/dagster/values.yaml
@@ -208,6 +208,12 @@ postgresql:
   # https://github.com/helm/charts/issues/12836#issuecomment-524552358
   postgresqlPassword: test
 
+  # Set this to use an external secret instead of creating one. The external secret must have the
+  # postgresql password under the key "postgresql-password".
+  # At least one of postgresqlPassword and postgresqlPasswordSecret must be specified.
+  # postgresqlPasswordSecret takes precedence over postgresqlPassword
+  postgresqlPasswordSecret: ""
+
   postgresqlDatabase: test
 
   service:
