Add option to provide own k8s secret for postgresql password
The motivation for this is to have our `values.yaml` checked in to
version control -- this isn't possible if we have a plaintext secret in it.

--- a/helm/dagster/templates/deployment-celery-queues.yaml
+++ b/helm/dagster/templates/deployment-celery-queues.yaml
@@ -59,7 +59,7 @@ spec:
             - name: DAGSTER_PG_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "{{ template "dagster.fullname" $ }}-postgresql-secret"
+                  name: {{ include "dagster.postgresql.passwordSecret" $ }}
                   key: postgresql-password
           envFrom:
             - configMapRef:
