--- a/helm/dagster/templates/deployment-dagit.yaml
+++ b/helm/dagster/templates/deployment-dagit.yaml
@@ -65,7 +65,7 @@ spec:
             - name: DAGSTER_PG_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "{{ template "dagster.fullname" . }}-postgresql-secret"
+                  name: {{ include "dagster.postgresql.passwordSecret" . }}
                   key: postgresql-password
           envFrom:
             - configMapRef:
