--- a/helm/dagster/requirements.yaml
+++ b/helm/dagster/requirements.yaml
@@ -2,9 +2,9 @@
 dependencies:
   - name: postgresql
     version: 8.1.0
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    repository: https://charts.helm.sh/stable
     condition: postgresql.enabled
   - name: rabbitmq
     version: 6.16.3
-    repository: https://kubernetes-charts.storage.googleapis.com/
+    repository: https://charts.helm.sh/stable
     condition: rabbitmq.enabled
