--- a/helm/index.yaml
+++ b/helm/index.yaml
@@ -2,7 +2,25 @@ apiVersion: v1
 entries:
   dagster:
   - apiVersion: v1
-    created: "2020-12-18T16:27:42.82442763-08:00"
+    created: "2021-01-14T10:51:01.500210546-08:00"
+    dependencies:
+    - condition: postgresql.enabled
+      name: postgresql
+      repository: https://charts.helm.sh/stable
+      version: 8.1.0
+    - condition: rabbitmq.enabled
+      name: rabbitmq
+      repository: https://charts.helm.sh/stable
+      version: 6.16.3
+    description: Dagster is a system for building modern data applications.
+    digest: 2028f05ce9a6e6a263a9a4fbac4e4a07a13c9edf83bb69db5f93991f5126c934
+    icon: https://raw.githubusercontent.com/dagster-io/dagster/master/assets/Dagster.png
+    name: dagster
+    urls:
+    - release/dagster-0.1.1.tgz
+    version: 0.1.1
+  - apiVersion: v1
+    created: "2021-01-14T10:51:01.493377136-08:00"
     dependencies:
     - condition: postgresql.enabled
       name: postgresql
@@ -17,6 +35,6 @@ entries:
     icon: https://raw.githubusercontent.com/dagster-io/dagster/master/assets/Dagster.png
     name: dagster
     urls:
-    - dagster-0.1.0.tgz
+    - release/dagster-0.1.0.tgz
     version: 0.1.0
-generated: "2020-12-18T16:27:42.819450104-08:00"
+generated: "2021-01-14T10:51:01.486995518-08:00"
